--- a/mixed/nitrofen.qmd
+++ b/mixed/nitrofen.qmd
@@ -67,8 +67,8 @@ Make a plot of the data:
 #| label: fig-nitrodat
 #| fig-cap: "The number of live offspring varies with the concentration of Nitrofen and the brood number."
 lnitrofen$jconc <- lnitrofen$conc + rep(c(-10,0,10),50)
-lnitrofen$fbrood = factor(lnitrofen$brood)
-ggplot(lnitrofen, aes(x=jconc,y=live, shape=fbrood, color=fbrood)) + 
+lnitrofen$brood = factor(lnitrofen$brood)
+ggplot(lnitrofen, aes(x=jconc,y=live, shape=brood, color=brood)) + 
        geom_point(position = position_jitter(w = 0, h = 0.5)) + 
        xlab("Concentration") + labs(shape = "Brood")
 ```
@@ -80,9 +80,11 @@ may have an interaction. The three observations for a single flea are
 likely to be correlated. We might expect a given flea to tend to produce
 more, or less, offspring over a lifetime. We can model this with an
 additive random effect. The linear predictor is:
-$$
+
+```{math}
 \eta_i = x_i^T \beta + u_{j(i)}, \quad i=1, \dots, 150. \quad j=1, \dots 50,
-$$
+```
+
 where $x_i$ is a vector from the design matrix encoding the information
 about the $i^{th}$ observation and $u_j$ is the random affect associated
 with the $j^{th}$ flea. The response has distribution
@@ -93,7 +95,7 @@ $Y_i \sim Poisson(\exp(\eta_i))$.
 We fit a model using penalized quasi-likelihood
 (PQL) using the `lme4` package:
 ```{r}
-glmod <- glmer(live ~ I(conc/300)*fbrood + (1|id), nAGQ=25, 
+glmod <- glmer(live ~ I(conc/300)*brood + (1|id), nAGQ=25, 
              family=poisson, data=lnitrofen)
 summary(glmod, correlation = FALSE)
 ```
@@ -120,9 +122,8 @@ the response for a `typical` individual.
 ```{r}
 #| label: fig-prednitro
 #| fig-cap: "Predicted number of live offspring"
-predf = data.frame(conc=rep(c(0,80,160,235,310),each=3),brood=rep(1:3,5))
+predf = data.frame(conc=rep(c(0,80,160,235,310),each=3),brood=factor(rep(1:3,5)))
 predf$live = predict(glmod, newdata=predf, re.form=~0, type="response")
-predf$brood = factor(predf$brood)
 ggplot(predf, aes(x=conc,y=live,group=brood,color=brood)) + 
   geom_line() + xlab("Concentration")
 ```
@@ -142,7 +143,7 @@ The same model, with default priors, can be fitted with INLA as:
 ```{r}
 #| label: nitroinla1
 #| cache: true
-formula <- live ~ I(conc/300)*fbrood + f(id, model="iid")
+formula <- live ~ I(conc/300)*brood + f(id, model="iid")
 imod <- inla(formula, family="poisson", data=lnitrofen)
 ```
 The fixed effects summary is:
@@ -199,7 +200,7 @@ Fitting the model is very similar to `lmer` as seen above:
 #| message: false
 #| warning: false
 #| error: false
-bmod <- brm(live ~ I(conc/300)*fbrood + (1|id), 
+bmod <- brm(live ~ I(conc/300)*brood + (1|id), 
             family=poisson, 
             data=lnitrofen, 
             refresh=0, silent=2, cores=4)
@@ -242,7 +243,7 @@ as a numerical variable.
 
 ```{r}
 lnitrofen$fid = factor(lnitrofen$id)
-gmod = gam(live ~ I(conc/300)*fbrood + s(fid,bs="re"), 
+gmod = gam(live ~ I(conc/300)*brood + s(fid,bs="re"), 
            data=lnitrofen, family="poisson", method="REML")
 ```
 
@@ -274,7 +275,7 @@ We make a Q-Q plot of the ID random effects:
 
 ```{r}
 #| label: fig-gamqq
-qqnorm(coef(gmod)[-(1:4)])
+qqnorm(coef(gmod)[-(1:6)])
 ```
 
 Nothing unusual here - none of the IDs standout in particular.
@@ -287,7 +288,7 @@ construct the GAM model without fitting and then use
 the `ginla()` function to perform the computation.
 
 ```{r}
-gmod = gam(live ~ I(conc/300)*fbrood + s(fid,bs="re"), 
+gmod = gam(live ~ I(conc/300)*brood + s(fid,bs="re"), 
            data=lnitrofen, family="poisson", fit = FALSE)
 gimod = ginla(gmod)
 ```
@@ -297,8 +298,8 @@ We get the posterior densities for the fixed effects as:
 ```{r}
 #| label: fig-nitroginlareff
 #| fig-cap: "Posteriors of the fixed effects"
-par(mfrow=c(2,2))
-for(i in 1:4){
+par(mfrow=c(3,2))
+for(i in 1:6){
 plot(gimod$beta[i,],gimod$density[i,],type="l",
      xlab=gmod$term.names[i],ylab="density")
 }
