--- a/mixed/ohio.qmd
+++ b/mixed/ohio.qmd
@@ -38,6 +38,7 @@ library(INLA)
 library(knitr)
 library(brms)
 library(mgcv)
+library(here)
 ```
 
 
@@ -52,10 +53,16 @@ whether the mother of the child is a smoker. Because we have four binary
 responses for each child, we expect these to be correlated and our model
 needs to reflect this.
 
+Read in and examine the first two subjects worth of data:
+
+```{r}
+ohio = read.csv(here("data","ohio.csv"),header = TRUE)
+kable(ohio[1:8,])
+```
+
 We sum the number of smoking and non-smoking mothers:
 ```{r}
 #| label: ohiodat
-data(ohio, package="brinla")
 table(ohio$smoke)/4
 ```
 We use this to produce the proportion of wheezing children classified by
