--- a/mixed/longitudinal.qmd
+++ b/mixed/longitudinal.qmd
@@ -72,7 +72,7 @@ psid$cyear <- psid$year-78
 We have centered the time variable year. Some plots of just 20 of the subjects:
 
 ```{r psidplot}
-psid20 <- dplyr::filter(psid, person <= 20)
+psid20 = subset(psid, person <= 20)
 ggplot(psid20, aes(x=year, y=income))+geom_line()+facet_wrap(~ person)
 ggplot(psid20, aes(x=year, y=income+100, group=person)) +geom_line()+facet_wrap(~ sex)+scale_y_log10()
 ```
